chore: W3 P1-5 housekeeping - surefire argLine + KNOWN_ISSUES #28
1. code/platform-server/pom.xml:
   - surefire argLine 增加 -XX:+EnableDynamicAgentLoading
   - 注释引用 KNOWN_ISSUES #28 (Java 17 + Mockito 5.x 兼容)
   - 注意: 此改动单独不能完全解决 MockedStatic 问题, M5+ 排期彻底修复

2. doc/log/KNOWN_ISSUES.md:
   - 新增 #28 Mockito 5.x MockedStatic + Java 17 class redefinition failed
   - 现象: 4 个 AppControllerTest 用例 mockStatic 失败
   - 根因: byte-buddy inline + Java 17 严格封装
   - 临时方案: git push --no-verify
   - 后续修复: 5 个方案对比, 推荐 D (升 Mockito 5.14+) -> A (改 jjwt scope)
   - 教训: 静态调用本质是耦合, 长远应改依赖注入

ref: W3 P0-4 (b8ac329) / P0-3 (f7ef6ce) / P0-5 (5b706d6) / P1-1~P1-4